--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/laurel_wreath.svg"
+      href="/dist/assets/laurel_wreath.84bfa8fa.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React SCSS project!</title>
+    <script
+      type="module"
+      crossorigin
+      src="/dist/assets/index.bbc2876e.js"
+    ></script>
+    <link rel="stylesheet" href="/dist/assets/index.79726338.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
