--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/assets/laurel_wreath.84bfa8fa.84bfa8fa.svg"
+      href="/dist/assets/laurel_wreath.84bfa8fa.84bfa8fa.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React SCSS project!</title>
-    
-    
-    <script type="module" crossorigin src="/assets/index.e38a7e35.js"></script>
-    <link rel="stylesheet" href="/assets/index.79726338.css">
+
+    <script
+      type="module"
+      crossorigin
+      src="/dist/assets/index.e38a7e35.js"
+    ></script>
+    <link rel="stylesheet" href="/dist/assets/index.79726338.css" />
   </head>
   <body>
     <div id="root"></div>
