--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="icon"
       type="image/svg+xml"
       href="/src/assets/laurel_wreath.svg"
